--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "Music Player",
 	"short_name": "MPlayer",
-	"scope": "/",
-	"start_url": "/index.html?from=homescreen",
+	"scope": "/Music-Player",
+	"start_url": "/Music-Player/index.html?from=homescreen",
 	"display": "standalone",
 	"orientation": "portrait",
 	"theme_color": "#FF0000",
