--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -15,6 +15,11 @@
 			"type": "image/png"
 		},
 		{
+			"src": "logo/192x192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
 			"src": "logo/144x144.png",
 			"sizes": "144x144",
 			"type": "image/png",
