--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "Music Player",
 	"short_name": "MPlayer",
-	"scope": "/Music-Player",
-	"start_url": "/Music-Player/index.html?from=homescreen",
+	"scope": "/Music-Player/",
+	"start_url": "/Music-Player/index.html",
 	"display": "standalone",
 	"orientation": "portrait",
 	"theme_color": "#FF0000",
@@ -10,17 +10,17 @@
 	"prefer_related_applications": true,
 	"icons": [
 		{
-			"src": "logo/512x512.png",
+			"src": "public/logo/512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		},
 		{
-			"src": "logo/192x192.png",
+			"src": "public/logo/192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "logo/144x144.png",
+			"src": "public/logo/144x144.png",
 			"sizes": "144x144",
 			"type": "image/png",
 			"purpose": "maskable"
